Add support for Sentry logging

--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -1,6 +1,9 @@
 # The documentation of this configuration file is a work-in-progress.
 # TODO: Make it not work-in-progress :P.
 #
+# Boolean entries are configured with a value of 0 for false, and 1 for true.
+# Values such as strings must be typed unquoted in order to work.
+#
 # Database configuration.
 # host (mandatory): The hostname/IP of the MySQL instance.
 # port (optional): The port of the MySQL instance (defaults to 3306).
@@ -63,6 +66,13 @@ redis_address = redis://redis
 salt_rounds = 12
 traceback = 1
 bot-user = kavplex
+
+# Sentry configuration.
+# dsn (optional): The Sentry DSN to report information to.
+# traces_sample_rate (optional): What percentage of requests (as a float from 0 to 1) to report for Sentry performance monitoring.
+[sentry]
+#dsn =
+#traces_sample_rate = 1.0
 
 # Ratelimit configuration.
 # This section will be removed in the future once the RPC interface is removed.
