--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
 	redis==3.5.3
 	requests==2.27.1
 	paginate==0.5.6
+	sentry-sdk[fastapi]==1.9.8
 
 	# SQL
 	alembic==1.7.7
@@ -47,12 +48,12 @@ install_requires =
 	gunicorn==20.1.0
 	Hypercorn==0.13.2
 	mysql-connector==2.2.9
-	prometheus-fastapi-instrumentator==5.7.1
+	prometheus-fastapi-instrumentator==5.9.1
 	pytest-xdist==2.5.0
 	filelock==3.6.0
 	posix-ipc==1.0.5
 	pyalpm==0.10.6
-	fastapi==0.75.1
+	fastapi==0.82.0
 
 	# Dev dependencies.
 	autoflake==1.4
